--- a/app/src/main/res/layout/app_list.xml
+++ b/app/src/main/res/layout/app_list.xml
@@ -18,7 +18,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/list_item1"
+        android:id="@+id/listview"
         android:layout_marginTop="10dp"
         android:layout_alignParentLeft = "true"
         android:layout_alignParentRight="true" />
