--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
     android:gravity="center_vertical" />
 
     <ListView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/listview"
     android:layout_marginTop="10dp"
     android:layout_alignParentLeft = "true"
