--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -39,11 +39,14 @@
         android:layout_marginLeft="55dp" />
 
     <Button
-        android:text="Button"
+        android:text="See in Map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/button2" />
+        android:id="@+id/button2"
+        android:elevation="0dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="#FFFFFF"/>
 
 </RelativeLayout>
