--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -47,7 +47,7 @@
         android:layout_alignLeft="@+id/ratingBar"
         android:layout_alignStart="@+id/ratingBar"
         android:layout_marginTop="5dp"
-        android:id="@+id/textView"
+        android:id="@+id/name"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:autoText="false" />
@@ -60,9 +60,9 @@
         android:elevation="2dp"
         android:backgroundTint="@color/colorPrimary"
         android:textColor="#FFFFFF"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
+        android:layout_below="@+id/name"
+        android:layout_alignLeft="@+id/name"
+        android:layout_alignStart="@+id/name"
         android:layout_marginTop="5dp" />
 
     <!--Price Text-->
@@ -70,7 +70,7 @@
         android:text="$5/hr."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView"
+        android:layout_above="@+id/name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="11dp"
